# open62541

./: CMakeLists.txt
debian/: changelog
examples/: CMakeLists.txt
examples/nodeset/: CMakeLists.txt
examples/nodeset/Euromap/: CMakeLists.txt  server_nodeset_euromap83.c  server_nodeset_euromap83_x.c
examples/nodeset/Euromap/nodesets/: Opc_Ua.EUROMAP77.1_00.NodeSet2.bsd  Opc_Ua.EUROMAP83.1_01.NodeSet2.bsd  Opc_Ua.EUROMAP83.1_01.NodeSet2.xml  Opc_Ua.EUROMAP83.RC1_01.NodeId.csv
examples/nodeset/Euromap/nodesetsX/: Opc.Ua.PlasticsRubber.GeneralTypes.NodeSet2.ua  Opc.Ua.PlasticsRubber.IMM2MES.NodeSet2.ua
tools/: gdb-prettyprint.py
tools/nodeset_compiler/: backend_open62541.py  backend_open62541_datatypes.py  backend_open62541_nodes.py  datatypes.py  nodes.py  nodeset.py  nodeset_compiler.py  nodeset_testing.py
